Styling of catalog.html is 100% complete

--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       <div class="main-header-top-wrapper">
         <div class="main-header-top container">
           <div class="header-top-left">
-            <a href="#" class="logo header-logo"><img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта"></a>
+            <a href="#" class="logo-image">
+              <img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта">
+            </a>
+            <a href="#" class="logo header-logo"></a>
             <form class="search-form">
-              <input type="text" class="search-field" name="search" value="Поиск:">
+              <input type="text" class="search-field" name="search" placeholder="Поиск:">
             </form>
           </div>
           <div class="header-top-right">
@@ -65,8 +68,8 @@
           <input class="visually-hidden" type="radio" id="puncher-slide" name="offers-item-slider-toggle">  
           <input class="visually-hidden" type="radio" id="drill-slide" name="offers-item-slider-toggle" checked>
           <div class="offers-item-slider-toggles">
-            <label for="puncher-slide" tabindex="0"></label>
-            <label for="drill-slide" tabindex="0"></label>
+            <label for="puncher-slide"></label>
+            <label for="drill-slide"></label>
           </div>
           <span class="slider-arrow slider-arrow-left" tabindex="0"></span>
           <div class="slider-item slider-item-drill">
@@ -199,9 +202,9 @@
             <input class="visually-hidden" type="radio" id="guarantee" name="toggle">
             <input class="visually-hidden" type="radio" id="credit" name="toggle">  
             <div class="service-slider">
-              <label for="delivery" tabindex="0">Доставка</label>
-              <label for="guarantee" tabindex="0">Гарантия</label>
-              <label for="credit" tabindex="0">Кредит</label>
+              <label for="delivery">Доставка</label>
+              <label for="guarantee">Гарантия</label>
+              <label for="credit">Кредит</label>
             </div>
             <ul class="service-list list-marker-switch">
               <li class="service-item service-item-delivery">
