--- a/catalog.html
+++ b/catalog.html
@@ -8,13 +8,16 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header main-header-catalog">
       <div class="main-header-top-wrapper">
         <div class="main-header-top container">
           <div class="header-top-left">
-            <a href="index.html" class="logo header-logo"><img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта"></a>
+            <a href="index.html" class="logo-image">
+              <img src="img/logo-top.png" width="220" height="47" alt="Логотип Техномарта">
+            </a>
+            <a href="index.html" class="logo header-logo"></a>
             <form class="search-form">
-              <input type="text" class="search-field" name="search" value="Поиск:">
+              <input type="text" class="search-field" name="search" placeholder="Поиск:">
             </form>
           </div>
           <div class="header-top-right">
@@ -32,7 +35,6 @@
         </p>
         <div class="user-account">
           <div class="account-management">
-            <a href="#" class="user-icon user-account-icon"><span class="visually-hidden">Перейти в личный кабинет</span></a>
             <a href="#" class="username">Равшан Джамшутович</a>
             <a href="#" class="user-icon account-exit-icon"><span class="visually-hidden">Выйти из аккаунта</span></a>
           </div>
@@ -58,10 +60,12 @@
           <li><a href="index.html" aria-label="Главная"><img src="img/icon-home.svg" width="15" height="12" alt="Главная"></a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Инструмент</a></li>
-          <li><a href="#">Перфораторы</a></li>
+          <li><a href="#" class="current-breadcrumbs-link">Перфораторы</a></li>
         </ul>
       </div>
-      <h1 class="catalog-main-title basic-title container">Перфораторы</h1>
+      <div class="catalog-title-wrapper container">
+        <h1 class="catalog-main-title basic-title">Перфораторы</h1>
+      </div>
       <div class="catalog-content-container container">
         <section class="filters">
           <h2 class="main-filter-title">Фильтр:</h2>
@@ -72,20 +76,22 @@
               <div class="price-range-line"></div>
               <span class="price-toggle price-toggle-right" aria-label="Установить верхнюю границу цены" tabindex="0"></span>
             </div>
-            <label class="visually-hidden" for="min-price">Нижняя граница цены</label><input class="price-field price-field-min" type="number" name="min-price" id="min-price" value="0"> —
-            <label class="visually-hidden" for="max-price">Верхняя граница цены</label><input class="price-field price-field-max" type="number" name="max-price" id="max-price" value="30000">
+            <div class="price-field-block">
+              <label class="visually-hidden" for="min-price">Нижняя граница цены</label><input class="price-field price-field-min" type="number" name="min-price" id="min-price" min="0" value="0">
+              <label class="visually-hidden" for="max-price">Верхняя граница цены</label><input class="price-field price-field-max" type="number" name="max-price" id="max-price" value="30000">
+            </div>
             <fieldset class="brands-filter">
               <legend class="filter-title">Производители:</legend>
-              <input type="checkbox" name="brand" value="Bosch" id="Bosch" checked><label for="Bosch">Bosch</label>
-              <input type="checkbox" name="brand" value="Interscol" id="Interscol"><label for="Interscol">Интерскол</label>
-              <input type="checkbox" name="brand" value="Makita" id="Makita" checked><label for="Makita">Makita</label>
-              <input type="checkbox" name="brand" value="Dewalt" id="Dewalt"><label for="Dewalt">Dewalt</label>
-              <input type="checkbox" name="brand" value="Hitachi" id="Hitachi"><label for="Hitachi">Hitachi</label>
+              <input class="visually-hidden" type="checkbox" name="brand" value="Bosch" id="Bosch" checked><label for="Bosch">Bosch</label>
+              <input class="visually-hidden" type="checkbox" name="brand" value="Interscol" id="Interscol"><label for="Interscol">Интерскол</label>
+              <input class="visually-hidden" type="checkbox" name="brand" value="Makita" id="Makita" checked><label for="Makita">Makita</label>
+              <input class="visually-hidden" type="checkbox" name="brand" value="Dewalt" id="Dewalt"><label for="Dewalt">Dewalt</label>
+              <input class="visually-hidden" type="checkbox" name="brand" value="Hitachi" id="Hitachi"><label for="Hitachi">Hitachi</label>
             </fieldset>
             <fieldset class="power-supply-filter">
               <legend class="filter-title">Питание</legend>
-              <input type="radio" name="power-supply" value="accumulator" id="accumulator" checked><label for="accumulator">Аккумуляторные</label>
-              <input type="radio" name="power-supply" value="cable" id="cable"><label for="cable">Сетевые</label>
+              <input class="visually-hidden" type="radio" name="power-supply" value="accumulator" id="accumulator" checked><label for="accumulator">Аккумуляторные</label>
+              <input class="visually-hidden" type="radio" name="power-supply" value="cable" id="cable"><label for="cable">Сетевые</label>
             </fieldset>
             <button class="submit-button" type="submit">Показать</button> 
           </form>
@@ -102,7 +108,7 @@
             <a href="#" class="sorting-toggle sorting-max-toggle" aria-label="Сначала дорогие"></a>
           </div>
           <ul class="catalog-list list-marker-switch">
-            <li class="catalog-list-item">
+            <li class="catalog-list-item" tabindex="0">
               <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="last-price">22500 Р.</span>
@@ -112,7 +118,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item" tabindex="0">
               <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="last-price">30500 Р.</span>
@@ -122,7 +128,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item no-sale">
+            <li class="catalog-list-item new-tag no-sale" tabindex="0">
               <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="current-price">12500 Р.</span>
@@ -131,7 +137,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item" tabindex="0">
               <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="last-price">22500 Р.</span>
@@ -141,7 +147,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item new-tag" tabindex="0">
               <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="last-price">30500 Р.</span>
@@ -151,7 +157,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item no-sale">
+            <li class="catalog-list-item no-sale" tabindex="0">
               <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="current-price">12500 Р.</span>
@@ -160,7 +166,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item new-tag" tabindex="0">
               <img src="img/bfg-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000">
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <span class="last-price">22500 Р.</span>
@@ -170,7 +176,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item">
+            <li class="catalog-list-item" tabindex="0">
               <img src="img/bfg-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000">
               <h3>Перфоратор BOSCH BFG 6000</h3>
               <span class="last-price">30500 Р.</span>
@@ -180,7 +186,7 @@
                 <button class="button bookmark-item-button" type="button">В закладки</button>
               </div>
             </li>
-            <li class="catalog-list-item no-sale">
+            <li class="catalog-list-item no-sale" tabindex="0">
               <img src="img/bfg-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
               <h3>Перфоратор BOSCH BFG 2000</h3>
               <span class="current-price">12500 Р.</span>
@@ -202,7 +208,7 @@
         <section class="puncher-info container">
           <h2 class="puncher-info-title basic-title">Пара слов о перфораторах</h2>
           <p class="basic-text">
-            Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+            Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
             Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В
             ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
           </p>
@@ -210,51 +216,51 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="main-footer-top-wrapper">
-        <div class="main-footer-top container">
-          <div>
-            <img src="img/logo-bottom.png" width="220" height="68" alt="Логотип Техномарта">
-            <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-                +7 (812) 555-05-55</p>
-          </div>
-          <nav class="main-footer-navigation">
-            <ul class="footer-navigation-top list-marker-switch">
-              <li><a href="#">Компания</a></li>
-              <li><a href="#">Новости</a></li>
-              <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="#">Доставка</a></li>
-              <li><a href="#">Контакты</a></li>
+        <div class="main-footer-top-wrapper">
+          <div class="main-footer-top container">
+            <div>
+              <img src="img/logo-bottom.png" width="220" height="68" alt="Логотип Техномарта">
+              <p class="main-footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+                  +7 (812) 555-05-55</p>
+            </div>
+            <nav class="main-footer-navigation">
+              <ul class="footer-navigation-top list-marker-switch">
+                <li><a href="#">Компания</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
+                <li><a href="#">Доставка</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
+              <ul class="footer-navigation-bottom list-marker-switch">
+                <li><a href="#">Материалы</a></li>
+                <li><a href="#">Техника</a></li>
+                <li><a href="#">Инструмент</a></li>
+                <li><a href="#">Спецпредложения</a></li>
+              </ul>
+            </nav>
+          </div>      
+        </div>
+        <div class="main-footer-bottom-wrapper">
+          <div class="main-footer-bottom container">
+            <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
+              Все права защищены</p>
+            <ul class="social-link-list list-marker-switch">
+              <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
+              <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
+              <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
             </ul>
-            <ul class="footer-navigation-bottom list-marker-switch">
-              <li><a href="#">Материалы</a></li>
-              <li><a href="#">Техника</a></li>
-              <li><a href="#">Инструмент</a></li>
-              <li><a href="#">Спецпредложения</a></li>
-            </ul>
-          </nav>
-        </div>      
-      </div>
-      <div class="main-footer-bottom-wrapper">
-        <div class="main-footer-bottom container">
-          <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
-            Все права защищены</p>
-          <ul class="social-link-list list-marker-switch">
-            <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
-            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
-            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
-          </ul>
-          <div>
-            <p class="main-footer-email">Обратная связь:
-              <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-            </p>
-            <p class="main-footer-developer">Разработано —
-              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-            </p>
+            <div class="developer-links">
+              <p class="main-footer-email">Обратная связь:
+                <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+              </p>
+              <p class="main-footer-developer">Разработано —
+                <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
-    <section class="modal modal-confirm">
+      </footer>
+      <section class="modal modal-confirm">
       <h2 class="visually-hidden">Информация об успешном добавлении товара в корзину</h2>
       <button class="close-button modal-close-button" type="button" aria-label="Закрыть окно-подтверждение о добавленном в корзину товаре" tabindex="0"></button>
       <span>Товар добавлен в корзину!</span>
