--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <h2 class="basic-title">Популярные товары:</h2>
           <a href="#" class="button popular-products-button">Все популярные товары</a>
         </header>
-        <ul class="catalog-list list-marker-switch">
+        <ul class="catalog-list catalog-list-mini list-marker-switch">
           <li class="catalog-list-item" tabindex="0">
             <img src="img/bfg-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000">
             <h3>Перфоратор BOSCH BFG 9000</h3>
@@ -253,8 +253,10 @@
           <h2 class="basic-title">Контакты</h2>
           <p class="basic-text">Вы можете забрать товар сами,
             заехав в наш офис:</p>
-          <a href="#"><img src="img/minimap.png" width="300" height="158" alt="Расположение компании «Техномарт»"></a>
-          <a href="#" class="button">Заблудились? Напишите нам!</a>
+          <a href="map.html">
+            <img src="img/minimap.png" width="300" height="158" alt="Расположение компании «Техномарт»">
+          </a>
+          <a href="writeus.html" class="button">Заблудились? Напишите нам!</a>
         </div>
       </section>
     </main>
