Verification of basic and additional criteria has been completed

--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
         </p>
         <div class="user-account">
           <div class="account-management">
-            <a href="#" class="username">Равшан Джамшутович</a>
+            <a href="#" class="username" aria-label="Перейти в личный кабинет">Равшан Джамшутович</a>
             <a href="#" class="user-icon account-exit-icon"><span class="visually-hidden">Выйти из аккаунта</span></a>
           </div>
           <a href="#">Мои заказы</a>
@@ -245,9 +245,9 @@
           <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
             Все права защищены</p>
           <ul class="social-link-list list-marker-switch">
-            <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
-            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
-            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
+            <li class="social-link-item social-link-vk"><a href="vk.com/technomart" aria-label="Страница Техномарта Вконтакте"></a></li>
+            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart" aria-label="Страница Техномарта в Фейсбуке"></a></li>
+            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart" aria-label="Страница Техномарта в Инстаграме"></a></li>
           </ul>
           <div class="developer-links">
             <p class="main-footer-email">Обратная связь:
