--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
           <a href="#" class="button offers-item-button">Для стройки</a>
         </div>
         <div class="offers-item offers-item-slider">
-          <input class="visually-hidden" type="radio" id="puncher-slide" name="offers-item-slider-toggle">  
-          <input class="visually-hidden" type="radio" id="drill-slide" name="offers-item-slider-toggle" checked>
+          <input class="visually-hidden" type="radio" id="puncher-slide" name="offers-item-slider-toggle" aria-label="Показать слайд с перфораторами">  
+          <input class="visually-hidden" type="radio" id="drill-slide" name="offers-item-slider-toggle" aria-label="Показать слайд с дрелями" checked>
           <div class="offers-item-slider-toggles">
-            <label for="puncher-slide"></label>
-            <label for="drill-slide"></label>
+            <label for="puncher-slide" aria-label="Показать слайд с перфораторами"></label>
+            <label for="drill-slide" aria-label="Показать слайд с дрелями"></label>
           </div>
-          <span class="slider-arrow slider-arrow-left" tabindex="0"></span>
+          <span class="slider-arrow slider-arrow-left" tabindex="0" aria-label="Показать предыдущий слайд"></span>
           <div class="slider-item slider-item-drill">
             <h3>Дрели</h3>
             <span>Соседям на радость!</span>
@@ -82,7 +82,7 @@
             <span>Настоящие мужские игрушки</span>
             <a href="catalog.html" class="button slider-item-button">Открыть каталог</a>
           </div>
-          <span class="slider-arrow slider-arrow-right" tabindex="0"></span>
+          <span class="slider-arrow slider-arrow-right" tabindex="0" aria-label="Показать следующий слайд"></span>
         </div>
         <div>
           <div class="offers-item sales-item">
@@ -290,9 +290,9 @@
           <p class="main-footer-copyright">© 2010–2019 Компания «Техномарт»
             Все права защищены</p>
           <ul class="social-link-list list-marker-switch">
-            <li class="social-link-item social-link-vk"><a href="vk.com/technomart"></a></li>
-            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart"></a></li>
-            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart"></a></li>
+            <li class="social-link-item social-link-vk"><a href="vk.com/technomart" aria-label="Страница Техномарта Вконтакте"></a></li>
+            <li class="social-link-item social-link-facebook"><a href="fb.com/technomart" aria-label="Страница Техномарта в Фейсбуке"></a></li>
+            <li class="social-link-item social-link-instagram"><a href="instagram.com/technomart" aria-label="Страница Техномарта в Инстаграме"></a></li>
           </ul>
           <div class="developer-links">
             <p class="main-footer-email">Обратная связь:
