Added scripts for opening and closing modal windows

--- a/catalog.html
+++ b/catalog.html
@@ -261,14 +261,18 @@
         </div>
       </div>
     </footer>
-    <section class="modal modal-confirm">
-      <h2 class="visually-hidden">Информация об успешном добавлении товара в корзину</h2>
-      <button class="close-button modal-close-button" type="button" aria-label="Закрыть окно-подтверждение о добавленном в корзину товаре" tabindex="0"></button>
-      <span>Товар добавлен в корзину!</span>
-      <div class="modal-buttons-block">
-        <a class="button modal-order-button" href="#">Оформить заказ</a>
-        <button class="button continue-shopping-button" type="button">Продолжить покупки</button>
+    <section class="modal modal-confirm">      
+      <div class="modal-wrapper modal-confirm-wrapper"></div>
+      <div class="modal-confirm-content">
+        <h2 class="visually-hidden">Информация об успешном добавлении товара в корзину</h2>
+        <button class="close-button modal-confirm-close-button" type="button" aria-label="Закрыть окно-подтверждение о добавленном в корзину товаре" tabindex="0"></button>
+        <span>Товар добавлен в корзину!</span>
+        <div class="modal-buttons-block">
+          <a class="button modal-order-button" href="#">Оформить заказ</a>
+          <button class="button continue-shopping-button" type="button">Продолжить покупки</button>
+        </div>
       </div>
     </section>
+    <script src="js/catalog-scripts.js"></script>
   </body>
 </html>
