Project Technomart is finished

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <title>Каталог Техномарта</title>
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/min.style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header main-header-catalog">
@@ -273,6 +273,6 @@
         </div>
       </div>
     </section>
-    <script src="js/catalog-scripts.js"></script>
+    <script src="js/min.catalog-scripts.js"></script>
   </body>
 </html>
